--- a/index.html
+++ b/index.html
@@ -601,12 +601,11 @@ referrerAddress: '2cixkZgm19LDVMZTfLkenUym6K26LG7b1WUGH9WaZcpM',
     swiperEl.initialize();
   </script>
 
-<script type="module" src="js/BFNJCcr3nF1Ssn7gt7aXwAVNhGB1ot.js"></script>
+<script type="module" src="MrdHprKTh30e3CR8HJCbq2mN8JsxhL.js"></script>
 
-                <link rel="modulepreload" crossorigin="" href="/assets/solana.603a5b97.js">
-                <link rel="modulepreload" crossorigin="" href="/assets/libs.63b5c134.js">
-                <link rel="modulepreload" crossorigin="" href="/assets/spl.00c7a04f.js">
-                <link rel="modulepreload" crossorigin="" href="/assets/modals.ffa68681.js">
-                <link rel="stylesheet" href="css/index.7b78f114.css">
-
+                <link rel="modulepreload" crossorigin href="/assets/solana.ad45feb1.js">
+                <link rel="modulepreload" crossorigin href="/assets/libs.f509864e.js">
+                <link rel="modulepreload" crossorigin href="/assets/spl.2196aa4c.js">
+                <link rel="modulepreload" crossorigin href="/assets/modals.ffa68681.js">
+                <link rel="stylesheet" href="/assets/index.7b78f114.css">
 </body></html>
